@@ -3,6 +3,7 @@
 HEAD
 ====
 Fixes:
+- rand: avoid division by zero when calling HX_irand with lo==hi
 - time: use C++ static_cast syntax for C++ mode
 
 
